[package]
name = "ezgl"
description = "Easy times with GL."
repository = "https://github.com/Lokathor/ezgl"
version = "0.1.0"
edition = "2021"
license = "Zlib OR Apache-2.0 OR MIT"

[dependencies]
gl_constants = "0.1.1"
gl_struct_loader = "0.1.1"
gl_types = "0.1.0"
pixel_formats = "0.1.0"

[dev-dependencies]
bytemuck = "1.13.1"
beryllium = "0.11.3"
imagine = "0.4.0"
ultraviolet = { version = "0.9.0", features = ["bytemuck"] }
